Updates system with barometer data and system indicators

--- a/project_kestrel/CMakeLists.txt
+++ b/project_kestrel/CMakeLists.txt
@@ -48,6 +48,8 @@ target_sources(${CMAKE_PROJECT_NAME} PRIVATE
     Core/Src/mpu6050.c
     Core/Src/kalman.c
     Core/Src/imu.c
+    Core/Src/bmp280.c
+    Core/Src/baro.c
 )
 
 # Add include paths
